Fix #16 - Scroll with error message is too long.

--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -40,6 +40,9 @@
   text-align: center;
   padding: 0 40px;
   margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
 }
 
 #modalButtons {
